# difetto

./: .gitattributes  .gitignore  Makefile  Readme.md  default.nix  flake.nix  nix_c_cpp_properties_json.py  pyproject.toml
librelane_plugin_difetto/: __init__.py  __version__.py  flows.py  steps.py
librelane_plugin_difetto/scripts/cocotb/: run_tvs.py  scan_chain.py  validate_chain.py
librelane_plugin_difetto/scripts/common/: chain.py  patterns.py
librelane_plugin_difetto/scripts/openroad/: chain.tcl
librelane_plugin_difetto/scripts/pyosys/: assemble.py  boundary_scan.py  cut.py  scan_replace.py
nix/openroad/: dft_npe.patch  dft_save_clk.patch
test/spm/: commands.sh  config.yaml  pin_order.cfg  sky130_mapping.json
test/spm/src/: spm.v
yosys-plugin/: .gitignore  Makefile  Readme.md  default.nix
yosys-plugin/include/: TextFlow.hpp  bsr_info.h  difetto_pass.h
yosys-plugin/src/: .gitignore  bsr.v
yosys-plugin/src/passes/: boundary_scan.cc  difetto_pass.cc  scan_replace.cc  sff_cut.cc
yosys-plugin/test/: .gitignore  conftest.py  module1.ys  spm.cut.bench  spm.ys  spm_cut.ys
yosys-plugin/test/iscas_89/: conftest.py  cut.tcl  fix_vdd_gnd_inputs.py  synth.tcl  test_iscas_89.py
yosys-plugin/test/spm/: cut.tcl  spm.v  synth.tcl  test_spm.py
yosys-plugin/test/src/: spm.v  test_spm.py
yosys-plugin/test/tech/: gen_map_sky130.py  sky130_mapping.json
yosys-plugin/test/tech/sky130/: gen_map_sky130.py  unmap_mux.v.map  unmap_muxi.v.map
