[project]
name = "librelane-plugin-difetto"
version = "0.1.0"
description = "Plugin implementing a DFT flow for LibreLane"
authors = [
    {name = "Mohamed Gaber", email = "me@donn.website"}
]
license-files = ["License"]
readme = "Readme.md"
requires-python = ">=3.8.1,<3.13"
dependencies = [
    "librelane (>=3.0.0.dev25,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
